...
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="氏名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XvS-Up-LGh">
                            <rect key="frame" x="0.0" y="0.0" width="35" height="20.5"/>
                            <accessibility key="accessibilityConfiguration" identifier="NameLabel"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HnY-Dk-x8e">
                                            <rect key="frame" x="0.0" y="0.0" width="17.5" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="FirstNameLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I0k-kf-ttX">
                                            <rect key="frame" x="25.5" y="0.0" width="83" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="FirstNameTextField"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8HX-Le-OJA">
                                            <rect key="frame" x="0.0" y="0.0" width="17.5" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="LastNameLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
...
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PLv-Ap-lNB">
                                            <rect key="frame" x="25.5" y="0.0" width="82.5" height="34"/>
                                            <accessibility key="accessibilityConfiguration" identifier="LastNameTextField"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
...
                    <rect key="frame" x="47" y="273.5" width="320" height="179"/>
                    <color key="backgroundColor" name="background_color"/>
                    <accessibility key="accessibilityConfiguration" identifier="PickerView"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="Oaz-Ow-8QY"/>
...
                    <rect key="frame" x="103.5" y="774.5" width="207" height="50"/>
                    <color key="backgroundColor" name="button_gradation_start_color"/>
                    <accessibility key="accessibilityConfiguration" identifier="RegistButton"/>
                    <constraints>
                        <constraint firstAttribute="width" secondItem="QTi-0F-XgW" secondAttribute="height" multiplier="5:1.2" id="gvv-va-fCo"/>
...
